Fixed testimonal alignment

--- a/src/css/contactpage.module.css
+++ b/src/css/contactpage.module.css
@@ -131,7 +131,9 @@
     padding-bottom: 30px;
     display: flex;
     flex-direction: column;
+
     align-items: center;
+    justify-content: center;
 }
 
 .outerTestimonials > h1{
@@ -141,11 +143,13 @@
 
 .testimonials{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     max-width: 1000px;
     width: 80%;
     padding-top: 20px;
     gap: 20px;
+
+    justify-items: center;
 }
 
 .quote{
@@ -155,6 +159,9 @@
     box-shadow: 0px 3px 10px lightgrey;
     padding: 1em;
     -webkit-border-radius: 25px;
+
+    max-width: 400px;
+    width: 100%;
 }
 
 .quote > p{
